[gd_scene load_steps=6 format=3 uid="uid://dg4dd53dv5m3"]

[ext_resource type="Script" path="res://Code/BattleUI/LayoutManagers/BattleManager.gd" id="1_6n5sf"]
[ext_resource type="PackedScene" uid="uid://bm5jf67wsb0j0" path="res://Scenes/CharacterCardLayout.tscn" id="1_n8f8j"]
[ext_resource type="PackedScene" uid="uid://nguo3bhhp25g" path="res://Scenes/AllyCardHandLayout.tscn" id="2_yoii6"]
[ext_resource type="PackedScene" uid="uid://b01lkl2l8uhmq" path="res://Scenes/right_slider.tscn" id="3_i0k80"]
[ext_resource type="PackedScene" uid="uid://y2otj6ibuy0b" path="res://Scenes/EnemyCardHandLayout.tscn" id="5_fpnce"]

[node name="Battlefield" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_6n5sf")

[node name="CharacterCardLayout" parent="." instance=ExtResource("1_n8f8j")]
layout_mode = 1
mouse_filter = 2

[node name="AllyCardHandLayout" parent="." instance=ExtResource("2_yoii6")]
layout_mode = 1

[node name="EnemyCardHandLayout" parent="." instance=ExtResource("5_fpnce")]
layout_mode = 1

[node name="Right Slider" parent="." instance=ExtResource("3_i0k80")]
layout_mode = 1
mouse_filter = 1
